fixing-conflicts-in-css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -113,5 +113,21 @@
   },
 
   // Enable/disable update table of contents on save
-  "markdown.extension.toc.updateOnSave": false
+  "markdown.extension.toc.updateOnSave": false,
+  "cSpell.words": [
+    "aliquet",
+    "apptweak",
+    "arteveld",
+    "Bilde",
+    "convallis",
+    "datacamp",
+    "Donec",
+    "Edouardo",
+    "Excalidraw",
+    "hogeschool",
+    "sapien",
+    "volutpat",
+    "Zepel",
+    "Zeynep"
+  ]
 }
