--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,18 +115,58 @@
   // Enable/disable update table of contents on save
   "markdown.extension.toc.updateOnSave": false,
   "cSpell.words": [
+    "AGORIA",
     "aliquet",
+    "Almeida",
+    "Antwerpen",
     "apptweak",
     "arteveld",
+    "atlascopco",
+    "Axxes",
     "Bilde",
+    "Brugge",
+    "Caua",
     "convallis",
     "datacamp",
+    "delenprivatebanck",
     "Donec",
+    "Dror",
     "Edouardo",
+    "EPITECH",
     "Excalidraw",
+    "foto",
+    "Gita",
+    "gratefull",
+    "Hanim",
+    "Hasselt",
     "hogeschool",
+    "HYFB",
+    "hyfdesign",
+    "keyframes",
+    "Lant",
+    "Meira",
+    "Nepo",
+    "odoo",
+    "Optis",
+    "Osegueda",
+    "ouncy",
+    "Polyanna",
+    "Ponomarev",
+    "Purswani",
+    "Ramzi",
+    "redirecionamento",
     "sapien",
+    "SWEEPATIC",
+    "Tarun",
+    "testemony",
+    "Todos",
+    "Verwijs",
     "volutpat",
+    "whoweare",
+    "wireframe",
+    "Wireframes",
+    "Yodiz",
+    "Yurii",
     "Zepel",
     "Zeynep"
   ]
