--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "prettier": "^2.8.8",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0"
+  },
+  "dependencies": {
+    "punycode": "^2.3.1"
   }
 }
